# Snapchat-All-Memories-Downloader

./: .gitignore  README.md  location_editor.py  main.py  pyproject.toml  requirements-location-editor.txt  requirements.txt
src/: __init__.py  args.py  config.py  download.py  ffmpeg.py  main.py  memory.py  metadata.py  ocr.py  overlay.py  stats.py  zip_processor.py
src/location_editor/: __init__.py  data.py  gui.py  memories.py  memory_model.py  storage.py
